[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/spaceship/spaceship.gd" type="Script" id=1]
[ext_resource path="res://sprites/spaceship1.png" type="Texture" id=2]
[ext_resource path="res://sounds/laser0.ogg" type="AudioStream" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.1

[node name="Spaceship" type="RigidBody2D"]
position = Vector2( 357.895, 255.956 )
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 1.59317, 0.255905 )
rotation = 1.57079
scale = Vector2( 1.1398, 1.17841 )
polygon = PoolVector2Array( 3.14334, -22.3799, 8.36292, -14.8846, 23.1354, 8.80022, 26.539, 17.543, 14.9556, 18.323, 15.1998, 21.7414, 4.33407, 21.8635, 3.32336, 18.2349, -1.94072, 18.2349, -3.60155, 22.1077, -14.7114, 21.7414, -14.5893, 18.2009, -24.7225, 18.323, -24.7225, 11.364, -6.94469, -15.0821, -3.69514, -22.4981 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )

[node name="CannonPosition" type="Position2D" parent="."]
position = Vector2( 28, 0 )

[node name="CannonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
polygon = PoolVector2Array( 3.14334, -22.3799, 8.36292, -14.8846, 11.085, -3.06236, 23.1354, 8.80022, 26.539, 17.543, 14.9556, 18.323, 15.1998, 21.7414, 4.33407, 21.8635, 4.57825, 18.5671, -3.60155, 18.4451, -3.60155, 22.1077, -14.7114, 21.7414, -14.5893, 18.2009, -24.7225, 18.323, -24.7225, 11.364, -11.6667, -3.70628, -6.94468, -15.0821, -3.60155, -21.2331 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
